2004-06-21  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	fix add bubble at the right time
	* src/monkey/shooter.c: (shooter_add_bubble), (shooter_shoot):
	* src/net/game.c: (recv_shoot), (bubble_sticked):
	* src/net/message-handler.c: (network_message_handler_class_init),
	(parse_message), (parse_add_bubble), (parse_next_range):
	* src/net/message-handler.h:
	* src/ui/game-1-player.c: (game_1_player_bubble_sticked),
	(game_1_player_bubble_shot):
	* src/ui/game-2-player.c: (game_2_player_bubble_shot),
	(game_2_player_bubble_sticked):
	* src/view/monkey-view.c: (monkey_view_shooter_shoot),
	(animate_waiting_bubble), (monkey_view_shooter_bubble_added):

2004-06-17  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	rename NetworkGameLauncher -> UiNetworkClient
	rename NetworkServerLauncher -> UiNetworkServer

	some network stuff...
	* data/monkey-bubble.glade:
	* data/netgame.glade:
	* data/netserver.glade:
	* src/net/game-manager-proxy.c: (net_game_manager_proxy_finalize):
	* src/net/message-handler.c: (network_message_handler_new),
	(network_message_handler_finalize), (handler_loop),
	(network_message_handler_disconnect),
	(network_message_handler_start_listening):
	* src/net/simple-server.c: (close_socket), (unref_handler),
	(network_simple_server_finalize):
	* src/ui/Makefile.am:
	* src/ui/network-game-launcher.c:
	* src/ui/network-game-launcher.h:
	* src/ui/network-server-launcher.c:
	* src/ui/network-server-launcher.h:
	* src/ui/ui-main.c: (ui_main_new), (new_network_game),
	(new_network_server):
	* src/ui/ui-network-client.c: (ui_network_client_new),
	(status_idle), (set_status_message), (connect_server_signal),
	(send_disconnect), (disconnected), (quit_signal),
	(quit_server_signal), (ready_signal), (send_init),
	(update_players_list_idle), (update_players_list),
	(start_game_idle), (start_game), (players_list_updated),
	(game_created), (update_number_of_players_idle),
	(update_number_of_players), (number_of_players_changed),